--- a/cloud-resume-challenge/resume-site/index.html
+++ b/cloud-resume-challenge/resume-site/index.html
@@ -79,7 +79,7 @@
                         <!-- ANIMATION CONTAINER -->
                         <div class="animation-container animation-fade-left" data-animation-delay="300">
                            
-                            <p class="subline">this is the try out of my web.! will announce soon oh wow second try sync, the third try with invalidatoin /index.html</p>
+                            <p class="subline">Never say never! this is the try out of my web.! will announce soon oh wow second try sync, the third try with invalidatoin /index.html</p>
                             
                         </div>
                         <!-- /ANIMATION CONTAINER -->
