--- a/cloud-resume-challenge/resume-site/index.html
+++ b/cloud-resume-challenge/resume-site/index.html
@@ -460,7 +460,7 @@
             fetch(' https://hduuzqjf31.execute-api.ap-northeast-1.amazonaws.com/Prod')
                 .then(response => response.json())
                 .then(data) => {
-                    document.getElementById('replaceme').innerText * data.count
+                    document.getElementById('replaceme').innerText = data.count
                 }
         </script>
    
