--- a/cloud-resume-challenge/resume-site/index.html
+++ b/cloud-resume-challenge/resume-site/index.html
@@ -94,7 +94,7 @@
                             <p class="subline">Never say never! this is the try out of my web.
                                 ! will announce soon oh wow second try sync, 
                                 the third try with invalidatoin /index.html <br>
-                                There you go endpoint cost!!!!
+                                just done the cicd part with youtube 
 
                                 Visitors:
                                 <span id= "replaceme" />
